<resources>
    <string name="app_name" translatable="false">E Academy</string>
    <string name="welcome">Welcome to</string>
    <string name="Are_you_sure_you_want_to_close_this_app">Are you sure you want to close this app?</string>
    <string name="Please_update_your_app_you_are_using_older_version">Please update your app you are using older version</string>
    <string name="currency">₹ </string>
    <string name="Practice_Paper">Practice Paper</string>
    <string name="Practice_Result">Practice Result</string>
    <string name="Mock_Test_Paper">Mock Test Paper</string>
    <string name="Mock_Test_Result">Mock Test Result</string>
    <string name="Academic_Record">Academic Record</string>
    <string name="See_your_score_here.">AIzaSyDhswi7p4jEzM2wvhDNJpaLHB7-F1IsHEI</string>
    <string name="Top_Scorer">Top Scorer </string>
    <string name="WelcomeToday_new_topic">Welcome, Today\'s new topic</string>
    <string name="Wanttologin">Want to login ?</string>
    <string name="signupwith">Sign Up with ,</string>
    <string name="Apply">Apply</string>
    <string name="Live_class">Live class</string>
    <string name="Personal_Notice">Personal Notice</string>
    <string name="Common_Notice">Common Notice</string>
    <string name="Month">Month</string>
    <string name="Assignment">Assignment</string>
    <string name="Year">Year</string>
    <string name="Payment">Payment</string>
    <string name="Announcements">Announcements</string>
    <string name="VideoLectures">Video Lectures</string>
    <string name="Applied_successfully.">Applied successfully.</string>
    <string name="Updated_successfully.">Updated successfully.</string>
    <string name="Try_again">Try again!</string>
    <string name="Try_again_server_issue">Something Went Wrong. Try Again !! or restart app</string>
    <string name="PleaseContactAdmin">Please Contact Admin</string>
    <string name="Please_Enter_Password">Please Enter Password</string>
    <string name="Please_Enter_name">Please Enter Name</string>
    <string name="Please_Enter_EnrollmentId">Please Enter Enrollment Id</string>
    <string name="Something_went_wrong">Something went wrong</string>
    <string name="Select_Date">Select Date</string>
    <string name="Required_Field">Required Field</string>
    <string name="hide..">hide..</string>
    <string name="Madam">Madam</string>
    <string name="Sir">Sir</string>
    <string name="Attendance">Attendance</string>
    <string name="Do_you_want_to_cancel_registration_process">Do you want to cancel registration process??</string>
    <string name="Loading...">Loading...</string>
    <string name="Subject">Subject</string>
    <string name="Title_of_video">Title of video</string>
    <string name="Subject_required">Subject required</string>
    <string name="SelectValidDates">Select Valid Dates</string>
    <string name="NoInternetConnection">No Internet Connection</string>
    <string name="PleaseSelectMonthAndYear">Please Select Month And Year</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="Approve">Approve</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Cancel">Cancel</string>
    <string name="Continue">Continue</string>
    <string name="Clickhere">Click here</string>
    <string name="ClickhereToContinue">Click here to continue...</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Signup">Sign Up</string>
    <string name="Name">Name</string>
    <string name="see">see</string>
    <string name="SelectImageFrom">Select Image From</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="CONFIRM_PASSWORD">CONFIRM PASSWORD</string>
    <string name="SAVE">SAVE</string>
    <string name="EnrollmentId">Enrollment Id</string>
    <string name="exam_instructions">1. All questions are compulsory.\n2. There will be 1 mark for each questions and 1/4 marks will be negative marking.\n3. Please read questions carefully.\n
        4. During exam you can not take screenshot.\n5. Paper will be auto submitted if you are using other application between exam.\n6. Don\'t press back or home button during exam.</string>
    <string name="select_month_and_year"> Select Month And Year To Filter Results</string>
    <string name="ok">OK</string>
    <string name="orLoginWith">Or Login As</string>
    <string name="Please_login_to_continue">Please login to continue...</string>
    <string name="LOGIN">LOGIN</string>
    <string name="All">All</string>
    <string name="Submit">Submit</string>
    <string name="Submit_successfully">Submitted Successfully</string>
    <string name="Download">Download</string>
    <string name="Date">Date</string>
    <string name="mcq">MCQ</string>
    <string name="Upcoming_Exams">Upcoming Exams</string>
    <string name="Time">Time</string>
    <string name="RESET">RESET</string>
    <string name="PREV_QUE">PREV QUE</string>
    <string name="NEXT_QUE">NEXT QUE</string>
    <string name="subject">Subject</string>
    <string name="Status">Status</string>
    <string name="Action">Action</string>
    <string name="Select_Assign_date.">Select Assignment date.</string>
    <string name="Chapter">Chapter</string>
    <string name="Teacher">Teacher</string>
    <string name="RightAnswers">Right Answers </string>
    <string name="AttemptQuestions">Attempt Questions </string>
    <string name="TotalQuestion">Total Question</string>
    <string name="ReviewDetails">Review Details</string>
    <string name="STARTPAPER">START PAPER</string>
    <string name="TotalQuestions">Total Questions</string>
    <string name="TotalAnswered">Total Answered</string>
    <string name="more">more..</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Please_allow_permissions">Please allow permissions</string>
    <string name="Certificate">Certificate</string>
    <string name="Settings">Settings</string>
    <string name="Are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="Viewmore">View more...</string>
    <string name="Title">Title</string>
    <string name="Payment_History">Payment History</string>
    <string name="Do_you_want_to_cancel_this_process">Do you want to cancel this process?</string>
    <string name="Present">Present</string>
    <string name="Instructions">Instructions</string>
    <string name="STARTNOW">START NOW</string>
    <string name="NOTNOW">NOT NOW</string>
    <string name="Description">Description</string>
    <string name="TotalAttempt">Total Attempt</string>
    <string name="CorrectAnswers">Correct Answers</string>
    <string name="TimeTaken">Time Taken</string>
    <string name="OK">OK</string>
    <string name="YourAnswerNotAttempted">Your Answer : Not Attempted</string>
    <string name="CorrectAnswerIsBelow">Correct Answer Is Below :</string>
    <string name="StartTime">Start Time</string>
    <string name="MockPaper">Mock Paper</string>
    <string name="Exams">Exams</string>
    <string name="Right">Right</string>
    <string name="Wrong">Wrong</string>
    <string name="Chart">Chart</string>
    <string name="PayFees">Pay Fees</string>
    <string name="WrongAnnswers">Wrong Annswers</string>
    <string name="ExtraClass">Extra Classes</string>
    <string name="DoubtClasses">Doubts</string>
    <string name="TotalScore">Total Score</string>
    <string name="AverageTimeUsedQuestion">Average Time Used/Question </string>
    <string name="SubmitTime">Submit Time</string>
    <string name="Percentage">Percentage</string>
    <string name="Apply_Date">Apply Date</string>
    <string name="leave_history">Leave History</string>
    <string name="default_notification_channel_id">12</string>
    <string name="NAME">NAME</string>
    <string name="Logout">Logout</string>
    <string name="About_App">About App</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Apply_Leave">Apply Leave</string>
    <string name="Download_Certificate">Download Certificate</string>
    <string name="Open_Source_Library">Open Source Library</string>
    <string name="SKIP">SKIP</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="Create_now">Create now</string>
    <string name="DoyouwanttoContinue">Do you want to Continue ?</string>
    <string name="PleasesaveyourIDandPassword">Please save your ID and Password</string>
    <string name="YourEnrollmentIdandPasswordis">Your EnrollmentId and Password is</string>
    <string name="Congratulation_you_have_successfully_enrolled_the_course">Congratulation!!\nYou Have Successfully Enrolled The Course</string>
    <string name="Dont_have_an_account">Don\'t have an account ?</string>
    <string name="Welcome_Select_Any_Batch">Welcome , Select Any Batch</string>
    <string name="NoClassAvailable">No Class Available</string>
    <string name="NotApproved">Not Approved</string>
    <string name="At">At</string>
    <string name="Message">Message</string>
    <string name="Notattempted">Not attempted</string>
    <string name="Teachersreply">Teacher\'s reply</string>
    <string name="To_Date_Not_countable">To Date (Not countable)</string>
    <string name="FromDate">From Date</string>
    <string name="Entersubject">Enter subject</string>
    <string name="EnterDescriptionOptional"> Description Like What you wanted to know in this chapter or for what ? (Optional)</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="ExamMode">Exam Mode</string>
    <string name="Duration">Duration</string>
    <string name="UpcomingClasses">Upcoming Classes</string>
    <string name="PreviousClasses">Previous Classes</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="EnterMobile">Enter Mobile</string>
    <string name="InvalidEmail">Invalid Email</string>
    <string name="Entervalidnumber">Enter valid number</string>
    <string name="Downloading...">Downloading...</string>
    <string name="EnterConfirmPassword">Enter Confirm Password</string>
    <string name="Passwordnotmatched.">Password not matched.</string>
    <string name="Password_must_contain_atleast_3_characters.">Password must contain atleast 3 characters</string>
    <string name="Paper_is_not_available_this_time_please_try_again">Paper is not available this time, Please try again</string>
    <string name="Password_doesnt_contain_spaces">Password doesn\'t contain spaces</string>
    <string name="No_Questions_available">No Questions available</string>
    <string name="Please_wait...">Please wait...</string>
    <string name="Payment_Done">Payment Done !</string>
    <string name="Payment_Cancel">Payment Cancel</string>
    <string name="Notices">Notices</string>
    <string name="This_app_needs_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="Welcome">Welcome</string>
    <string name="Video_Lecture">Video Lecture</string>
    <string name="Mode_of_exam">Mode of exam</string>
    <string name="By">By</string>
    <string name="Result">Result</string>
    <string name="Pending">Pending</string>
    <string name="Free">Free</string>
    <string name="Approved">Approved</string>
    <string name="Decline">Decline</string>
    <string name="Totaldays">Total days</string>
    <string name="Startson">Start on</string>
    <string name="Endson">End on</string>
    <string name="Downloadingfailed">Downloading failed !!</string>
    <string name="DownloadCompleted">Download Completed !!</string>
    <string name="ErrorOccurred">Error occurred! </string>
    <string name="Version">Version</string>
    <string name="SelectBatchNow">Select Batch Now</string>
    <string name="TODAYOFFER">TODAY OFFER</string>
    <string name="OFFER">OFFER</string>
</resources>