<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/_210sdp"
    android:layout_gravity="center_vertical"
    android:background="@drawable/backcurve"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBackDilog"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="6dp"
            android:src="@drawable/ic_backarrow" />

        <com.pixelnx.eacademy.utils.widgets.CustomTextExtraBold
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ivBackDilog"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/SelectImageFrom"
            android:textColor="@color/white"

            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_adapter_white"
            android:orientation="vertical"

            android:padding="@dimen/_13sdp">

            <com.pixelnx.eacademy.utils.widgets.CustomTextSemiBold
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/back_shade_designmain"
                android:gravity="center"
                android:text="@string/Camera"
                android:textColor="@color/white" />

            <com.pixelnx.eacademy.utils.widgets.CustomTextSemiBold
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/back_shade_designmain"
                android:gravity="center"
                android:text="@string/Gallery"
                android:textColor="@color/white" />

            <com.pixelnx.eacademy.utils.widgets.CustomTextSemiBold
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/back_shade_designmain"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>